# embedding_colosseum

./: .gitignore  Depth.ipynb  FRQI.py  NEQR.py  OQIM.py  PennyLaneVC_cats.ipynb  PennyLaneVC_digits.ipynb  QIR_implementation.ipynb  README.md  dataLoader.py  functions.py  main.py  pennylane.ipynb  postprocessing.py  pyproject.toml  regression.ipynb  requirements.txt
cluster_outputs/2026-01-15/22-04-31/: multirun.yaml
conf/: config.yaml
conf/dataset/: base.yaml  brain_tumor.yaml  cifar10.yaml  cxr8.yaml  eurosat_ms.yaml  eurosat_rgb.yaml  fashion.yaml  mnist.yaml  st110.yaml  stl10.yaml
conf/embedding/: AngleEncoding.yaml  FRQI.yaml  NAQSS.yaml  NEQR.yaml  OQIM.yaml  RMP.yaml  ZZFeatureMap.yaml
conf/experiment/: base.yaml  dataset.yaml  four.yaml  mnist.yaml  one.yaml  three.yaml  two.yaml
conf/model/: default.yaml
conf/training/: base.yaml
improvedversion_notworking/: FRQI_Improved_testGeneralitzation.ipynb  mary.py
new/: main.py
old/: Depth.ipynb  PennyLaneVC_cats.ipynb  PennyLaneVC_digits.ipynb  QIR_implementation.ipynb  dataLoader.py  main.py  pennylane.ipynb
old/improvedversion_notworking/: FRQI_Improved_testGeneralitzation.ipynb
prelim_results/: plots.ipynb
results/combined/: analyze_outputs.py  results_PQCbased_seed0.csv  results_PQCbased_seed1.csv
src/classify_dataset/: dataset_fingerprinter.py  edge_density.py  extract_feature_vectors.py  glcm.py  phase_correlation.py  represontaitonal_learning.py  shannon_entropy.py  vae.py
src/dataset/: DataManager.py  brain_tumor.py  cxr8.py  eurosat.py  multimodal_dataset.py
src/embeddings/: AngleEncoding.py  FRQI_PennyLane.py  NAQSS.py  NEQR_PennyLane.py  OQIM_PennyLane.py  RMP_Prototype.py  ZZFeatureMap.py  temp_FRQI_test.py  temp_NEQR_test.py  temp_OQIM_test.py
src/model/: VariationalClassifier.py
src/preprocessing/: denoising_filters.py  homomorphic_filter.py  pca.py
src/training/: run_training.py
src/utils/: TrainingLogger.py  save_training_progress.py
(+3298 files in other folders)
