[project]
name = "embedding-colosseum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.14.0",
    "hydra-core>=1.3.2",
    "hydra-joblib-launcher>=1.2.0",
    "ipykernel>=6.30.1",
    "keras>=3.11.3",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "pennylane>=0.42.3",
    "pennylane-qiskit>=0.36.0",
    "qiskit==0.45",
    "qiskit-aer>=0.14.1",
    "qiskit-algorithms>=0.3.1",
    "qiskit-ibm-provider>=0.11.0",
    "qiskit-ibmq-provider>=0.19.2",
    "qiskit-machine-learning>=0.7.2",
    "tensorflow>=2.18.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]
