[project]
name = "embedding-colosseum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.14.0",
    "hydra-core>=1.3.2",
    "hydra-joblib-launcher>=1.2.0",
    "hydra-optuna-sweeper>=1.2.0",
    "ipykernel>=6.30.1",
    "keras>=3.11.3",
    "matplotlib>=3.10.6",
    "opencv-python-headless>=4.12.0.88",
    "pandas>=2.3.3",
    "pennylane>=0.42.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.18.1",
    "tifffile>=2026.1.14",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "scikit-image>=0.26.0",
]
